--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Mabim</title>
-  <link rel="icon" href="img/HIMASI.png">
+  <link rel="icon" href="img/favicon.png">
   <link rel="stylesheet" href="style.css">
   <!-- CSS Inline -->
   <style>
@@ -12,7 +12,7 @@
 <body>
   <center>
     <nav>
-      <img src="img/HIMASI.png" alt="" height="50px">
+      <img src="img/favicon.png" alt="" height="50px">
      <!-- CSS Inline -->
       <!-- CSS Inline-->
       <!-- Link -->
@@ -22,7 +22,7 @@
       <!-- Link -->
     </nav>
     <br>
-    <video src="media/Mars-Unsub.mp4"controls height="500px"></video><br>
+    <video src="media/Mars-UNSUB.mp4"controls height="500px"></video><br>
     <audio src="media/Mars-Himasi.mp3"controls></audio>
     <section id="CONTACT">
       <h1>CONTACT</h1>
